--- a/1v1-lol.html
+++ b/1v1-lol.html
@@ -129,7 +129,7 @@
               };
               document.write('<scr' + 'ipt type="text/javascript" src="//www.highcpmcreativeformat.com/9cca3f3606cb30a272c1d4558911d794/invoke.js"></scr' + 'ipt>');
             </script></div><div class="col-xxl-12">
-                <iframe src="https://webglmath.github.io/1v1-lol/" frameborder="0" style="width:100%;height:85vh"></iframe><div style="text-align: center;"><script type="text/javascript">
+                <iframe src="https://poorbunny.io/game/1v1-lol/" frameborder="0" style="width:100%;height:85vh"></iframe><div style="text-align: center;"><script type="text/javascript">
                   atOptions = {
                     'key' : 'bd60cf566a88493dd44e6f64569ef583',
                     'format' : 'iframe',
